fix: update icons and tooltips

--- a/userprofile/templates/userprofile/response_detail.html
+++ b/userprofile/templates/userprofile/response_detail.html
@@ -73,9 +73,9 @@
     <div class="row right-align">
         <div id="reference-toolbar" class=" scale-transition scale-out .col s12 m8 reference-tooblar blue lighten-5">
             <ul>
-                    <li><a class=" btn-floating btn-flat grey lighten-1 tooltipped" data-position="bottom" data-tooltip="coming soon"><i class="material-icons">insert_chart</i></a></li>
-                    <li><a class=" btn-floating btn-flat grey lighten-1 tooltipped" data-position="bottom" data-tooltip="coming soon"><i class="material-icons">format_quote</i></a></li>
-                    <li><a class=" btn-floating btn-flat grey lighten-1 tooltipped" data-position="bottom" data-tooltip="coming soon"><i class="material-icons">publish</i></a></li>
+                    <li><a class=" btn-floating btn-flat grey lighten-1 tooltipped" data-position="bottom" data-tooltip="send to email - coming soon"><i class="material-icons">send</i></a></li>
+                    <li><a class=" btn-floating btn-flat grey lighten-1 tooltipped" data-position="bottom" data-tooltip="save as pdf - coming soon"><i class="material-icons">picture_as_pdf</i></a></li>
+                    <li><a class=" btn-floating btn-flat grey lighten-1 tooltipped" data-position="bottom" data-tooltip="share - coming soon"><i class="material-icons">share</i></a></li>
                     <li><a data-target="{{ response.id }}"  class=" modal-trigger btn-floating deep-purple" data-position="bottom" data-tooltip="coming soon"><i class="material-icons">delete</i></a></li>
               </ul>
 
