--- a/userprofile/templates/userprofile/components/modals/base_modal.html
+++ b/userprofile/templates/userprofile/components/modals/base_modal.html
@@ -1,4 +1,4 @@
- <div{% block modal_id %}id="{{ request.id }}" {% endblock modal_id %} class="modal"> 
+ <div{% block modal_id %} {% endblock modal_id %} class="modal"> 
     <div class="modal-header">
         <div class="modal-image-container">
             <img height="200px" width="auto" src="{% block modal_img %} 
