--- a/userprofile/templates/base.html
+++ b/userprofile/templates/base.html
@@ -24,34 +24,34 @@
     </head>
     <body>
         <header>
-            <nav>
-                <div class="nav-wrapper z-depth-1">
-                    <a href="{% url 'home' %}" class="brand-logo">Pytagora</a>
-                    <a href="#" data-target="pytagora-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                    <ul class="right hide-on-med-and-down">
-                        {% if user.is_authenticated %}
-                        <li><a href="{% url 'test_profile' %}">Logged in as {{ user.first_name }}</a></li>
-                        <li>
-                            <a href="{% url 'logout' %}">logout</a>
-                        </li> 
-                        <li>
-                            <a href="{% url 'home' %}">Home</a>
-                        </li>
-                        {% else %}   
-                        <li>
-                            <a href="{% url 'login' %}"> login</a>
-                        </li>   
-                        <li>
-                            <a href="{% url 'home' %}">Home</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'signup' %}">Signup</a>
-                        </li>
-                        
-                        {% endif %}
-        
-       
-                    </ul>
+            <nav class="deep-purple">
+                <div class="container">
+                    <div class="nav-wrapper z-depth">
+                        <a href="{% url 'home' %}" class="brand-logo">Pytagora</a>
+                        <a href="#" data-target="pytagora-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                        <ul class="right hide-on-med-and-down">
+                            {% if user.is_authenticated %}
+                            <li><a href="{% url 'test_profile' %}">Logged in as {{ user.first_name }}</a></li>
+                            <li>
+                                <a href="{% url 'logout' %}">logout</a>
+                            </li> 
+                            <li>
+                                <a href="{% url 'home' %}">Home</a>
+                            </li>
+                            {% else %}   
+                            <li>
+                                <a href="{% url 'login' %}"> login</a>
+                            </li>   
+                            <li>
+                                <a href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'signup' %}">Signup</a>
+                            </li>
+                            
+                            {% endif %}
+                        </ul>
+                    </div>
                 </div>
             </nav>
             <ul class="sidenav" id="pytagora-sidenav">
@@ -77,7 +77,7 @@
         {% endblock content %}
        </main>
 
-        <footer class="page-footer pytagora-orange" >
+        <footer class="page-footer deep-purple darken-2" >
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright orange lighten-2">
+            <div class="footer-copyright deep-purple darken-4">
                 <div class="container">
                     © 2014 Copyright Text
                     <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
