--- a/userprofile/templates/userprofile/components/forms/signup_form.html
+++ b/userprofile/templates/userprofile/components/forms/signup_form.html
@@ -13,14 +13,18 @@
 {% block form %}
 <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form.first_name|materializecss:"s6" }}
+    {{ form.last_name|materializecss:"s6" }}
+    {{ form.email|materializecss:"s12" }}
+    {{ form.password1|materializecss:"s7" }}
+    {{ form.password2|materializecss:"s7" }}
 
-    <div class="row valign-wrapper row-margin-add">
+    <div class="row row-margin-add">
         <div class="col s6">
             <button type="submit" class="btn">Create Account</button>
         </div>
         <div class="col s6 right-align">
-            <p>already have a profile? <a class="blue-text" href="{% url 'login' %}">Sign in here</a></p>
+            <p>already member? <br /> <a class="blue-text" href="{% url 'login' %}">Sign in here</a></p>
         </div>
         
 </form>
