--- a/userprofile/templates/userprofile/signup.html
+++ b/userprofile/templates/userprofile/signup.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-{% include "./components/forms/signup_form.html" %}
+<div class="container">
+    <div class="row">
+        <div class="col s12 m8 l6 offset-m2 offset-l3">
+            {% include "./components/forms/signup_form.html" %}
+        </div>
+    </div>
+    
+</div>
 {% endblock content %}
